tests/sumo/errors/routes/last_edge_false__newstyle_plainemission/errors.sumo
Error: The edge 'xxx' within the route for vehicle '0' is not known.
 The route can not be build.
Quitting (on error).
